--- a/src/ThingsGateway.Server/Index/AdminIndex.razor
+++ b/src/ThingsGateway.Server/Index/AdminIndex.razor
@@ -2,6 +2,8 @@
 
 
 
+@using BootstrapBlazor.Components
+@using Microsoft.AspNetCore.Authorization
 @using ThingsGateway.Admin.Application
 @attribute [Authorize]
 @attribute [IgnoreRolePermission]
