--- a/src/ThingsGateway.Server/Index/GatewayIndexComponent.razor
+++ b/src/ThingsGateway.Server/Index/GatewayIndexComponent.razor
@@ -1,8 +1,11 @@
 ﻿@namespace ThingsGateway.Gateway.Razor
+@using BootstrapBlazor.Components
 @using ThingsGateway.Admin.Application
 @using ThingsGateway.Admin.Razor
 
-
+@{
+#if !Admin
+}
 
 <div class="row g-2 mx-1 form-inline">
     <div class="col-12 col-sm-3 col-md-3" style="height:100%">
@@ -36,3 +39,6 @@
 </div>
 
 
+@{
+#endif
+}
