--- a/src/ThingsGateway.Admin.Razor/Pages/UserCenter/UserCenterPage.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/UserCenter/UserCenterPage.razor
@@ -10,7 +10,7 @@
         <UserInfoEditComponent Model="SysUser" OnSave="OnSaveUserInfo" />
     </TabItem>
     <TabItem Text=@Localizer["UpdatePasswordInfo"]>
-        <EditComponent Model="UpdatePasswordInput" ItemsPerRow=1 OnSave="OnSavePassword" />
+        <UserPassowrdEditComponent Model="UpdatePasswordInput" OnSave="OnSavePassword" />
     </TabItem>
     <TabItem Text=@Localizer["WorkbenchInfo"]>
         <WorkbenchInfoEditPage Model="WorkbenchInfo" OnSave="OnSaveWorkbench" SelectedItems="SelectedItems" />
