feat: mqtt脚本添加检查按钮

--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
@@ -214,8 +214,45 @@ else
             {
                 <ValidateForm Model="Model.PluginPropertyModel.Value" @ref=Model.PluginPropertyModel.ValidateForm Id="@Model.Id.ToString()">
 
-                    <EditorFormObject class="p-2" Items=PluginPropertyEditorItems AutoGenerateAllItem="true" RowType=RowType.Inline ItemsPerRow=2 ShowLabelTooltip=true LabelWidth=250 Model="Model.PluginPropertyModel.Value" @key=Model.PluginPropertyModel.Value.GetType().TypeHandle.Value>
+                    <EditorFormObject class="p-2" Items=PluginPropertyEditorItems AutoGenerateAllItem="false" RowType=RowType.Inline ItemsPerRow=2 ShowLabelTooltip=true LabelWidth=250 Model="Model.PluginPropertyModel.Value" @key=Model.PluginPropertyModel.Value.GetType().TypeHandle.Value>
 
+                        <FieldItems>
+                            @if (Model.PluginPropertyModel.Value is BusinessPropertyWithCacheIntervalScript businessProperty)
+                            {
+                                <EditorItem FieldExpression=@(()=>context) Field=@(context)>
+
+                                    <EditTemplate Context="value">
+                                        <div class="col-12  col-md-12">
+                                            <Textarea @bind-Value=@businessProperty.BigTextScriptDeviceModel ShowLabelTooltip="true"
+                                                      rows="5" ShowLabel="true" />
+                                            <div class="ms-2 d-flex justify-content-center align-items-center">
+                                                <Button OnClick="()=>CheckScript(businessProperty,nameof(businessProperty.BigTextScriptDeviceModel))">
+                                                    @Localizer["Check"]
+                                                </Button>
+                                            </div>
+                                        </div>
+                                        <div class="col-12  col-md-12">
+                                            <Textarea @bind-Value=@businessProperty.BigTextScriptVariableModel ShowLabelTooltip="true"
+                                                      rows="5" ShowLabel="true" />
+                                            <div class="ms-2 d-flex justify-content-center align-items-center">
+                                                <Button OnClick="()=>CheckScript(businessProperty,nameof(businessProperty.BigTextScriptVariableModel))">
+                                                    @Localizer["Check"]
+                                                </Button>
+                                            </div>
+                                        </div>
+                                        <div class="col-12  col-md-12">
+                                            <Textarea @bind-Value=@businessProperty.BigTextScriptAlarmModel ShowLabelTooltip="true"
+                                                      rows="5" ShowLabel="true" />
+                                            <div class="ms-2 d-flex justify-content-center align-items-center">
+                                                <Button OnClick="()=>CheckScript(businessProperty,nameof(businessProperty.BigTextScriptAlarmModel))">
+                                                    @Localizer["Check"]
+                                                </Button>
+                                            </div>
+                                        </div>
+                                    </EditTemplate>
+                                </EditorItem>
+                            }
+                        </FieldItems>
                     </EditorFormObject>
                 </ValidateForm>
             }
