fix: mqtt脚本检查功能中的类型转换错误

--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/ScriptCheck.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/ScriptCheck.razor
@@ -4,7 +4,7 @@
 @using ThingsGateway.Gateway.Application
 
 <div class="col-12  col-md-12">
-    <Textarea Value=@Script ValueChanged=@ScriptChanged ValueExpression="()=>Script" ShowLabelTooltip="true"
+    <Textarea Value=@Script ValueChanged=@Change ValueExpression="()=>Script" ShowLabelTooltip="true"
               rows="10" ShowLabel="true" />
 </div>
 <div class="col-12  col-md-12">
