--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DevicePage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Device/DevicePage.razor
@@ -11,7 +11,7 @@
 
     <AdminTable @ref=table TItem="Device" AutoGenerateColumns="true" ShowAdvancedSearch=false
                 AllowResizing="true" IsFixedHeader=true IsMultipleSelect=true SearchModel=SearchModel
-                ShowExtendButtons=true ShowExportButton
+                ShowExtendButtons=true ShowExportButton ScrollingDialogContent
                 ShowDefaultButtons=true ExtendButtonColumnWidth=150
                 OnQueryAsync="OnQueryAsync" IsPagination=true
                 OnSaveAsync="Save" OnDeleteAsync="Delete">
