--- a/src/ThingsGateway.Server/Routes.razor
+++ b/src/ThingsGateway.Server/Routes.razor
@@ -1,20 +1,22 @@
 ﻿@using Microsoft.AspNetCore.Components.Routing
 @using ThingsGateway.Admin.Application
-@namespace ThingsGateway.Server
+@namespace ThingsGateway
 
-    <Router AppAssembly="@typeof(Routes).Assembly" AdditionalAssemblies="NetCoreApp.RazorAssemblies.Where(a=>a!=typeof(Routes).Assembly)">
-    <Found Context="routeData">
+<Router AppAssembly="@typeof(Routes).Assembly" AdditionalAssemblies="NetCoreApp.RazorAssemblies.Where(a=>a!=typeof(Routes).Assembly)">
+<Found Context="routeData">
 
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(Razor.MainLayout)" />
+    <RouteView RouteData="@routeData" DefaultLayout="@typeof(Razor.MainLayout)" />
 
 
-    </Found>
-    <NotFound>
-        <LayoutView Layout="@typeof(Razor.BaseLayout)">
-        <ThingsGateway.Admin.Razor.NotFound404></ThingsGateway.Admin.Razor.NotFound404>
-            </LayoutView>
-        </NotFound>
+</Found>
+<NotFound>
+    <LayoutView Layout="@typeof(Razor.BaseLayout)">
+    <ThingsGateway.Admin.Razor.NotFound404></ThingsGateway.Admin.Razor.NotFound404>
+        </LayoutView>
+    </NotFound>
 </Router>
+
+
 
 
 
