feat: 日志组件添加等级筛选

--- a/src/tools/ThingsGateway.Foundation.Razor/DebugPages/AdapterDebugComponent.razor
+++ b/src/tools/ThingsGateway.Foundation.Razor/DebugPages/AdapterDebugComponent.razor
@@ -106,7 +106,10 @@
 
     </div>
     <div class="col-12 col-md-7 ">
-        <LogConsole LogPath=@LogPath HeaderText=@HeaderText></LogConsole>
+        @if (Plc!=null)
+        {
+            <LogConsole Logger=@Plc.Logger LogPath=@LogPath HeaderText=@HeaderText></LogConsole>
+        }
     </div>
 </div>
 
