--- a/src/debugs/ThingsGateway.Debug.Rcl/Pages/Base.razor
+++ b/src/debugs/ThingsGateway.Debug.Rcl/Pages/Base.razor
@@ -1,26 +1,47 @@
-﻿
-
-@page "/"
-@layout BaseLayout
+﻿@page "/"
+@layout MainLayout
 @inject NavigationManager NavigationManager
 @namespace ThingsGateway.Debug
 @using Microsoft.AspNetCore.Authorization;
 
+
+<div class="file_content markdown-body">
+    <h1>
+        <a id="user-content-thingsgateway" class="anchor" href="#thingsgateway"></a>ThingsGateway
+    </h1>
+    <h4>
+        <a id="user-content-文档" class="anchor" href="#%E6%96%87%E6%A1%A3"></a>文档
+    </h4>
+    <p><a href="https://gitee.com/link?target=https%3A%2F%2Fkimdiego2098.github.io%2F">文档</a></p>
+    <p><a href="https://gitee.com/link?target=https%3A%2F%2Fwww.nuget.org%2Fpackages%3Fq%3DTags%253A%2522ThingsGateway%2522">NuGet</a></p>
+
+    <h4>
+        <a id="user-content-协议" class="anchor" href="#%E5%8D%8F%E8%AE%AE"></a>协议
+    </h4>
+    <p><a href="https://gitee.com/diego2098/ThingsGateway/blob/master/LICENSE">Apache-2.0</a></p>
+    <h4>
+        <a id="user-content-演示" class="anchor" href="#%E6%BC%94%E7%A4%BA"></a>演示
+    </h4>
+    <p><a href="https://gitee.com/link?target=http%3A%2F%2F47.119.161.158%3A5000%2F">ThingsGateway演示地址</a></p>
+    <p>账户	:  <strong>SuperAdmin</strong></p>
+    <p>密码 : <strong>111111</strong></p>
+    <p><strong>右上角个人弹出框中，切换到物联网关模块</strong></p>
+
+    <h4>
+        <a id="user-content-赞助" class="anchor" href="#%E8%B5%9E%E5%8A%A9"></a>赞助
+    </h4>
+    <p><a href="https://gitee.com/link?target=https%3A%2F%2Fkimdiego2098.github.io%2Fdocs%2F1000">赞助途径</a></p>
+    <h4>
+        <a id="user-content-社区" class="anchor" href="#%E7%A4%BE%E5%8C%BA"></a>社区
+    </h4>
+    <p>QQ群：605534569 <a href="https://gitee.com/link?target=http%3A%2F%2Fqm.qq.com%2Fcgi-bin%2Fqm%2Fqr%3F_wv%3D1027%26k%3DNnBjPO-8kcNFzo_RzSbdICflb97u2O1i%26authKey%3DV1MI3iJtpDMHc08myszP262kDykbx2Yev6ebE4Me0elTe0P0IFAmtU5l7Sy5w0jx%26noverify%3D0%26group_code%3D605534569">跳转</a></p>
+    <h4>
+        <a id="user-content-pro插件" class="anchor" href="#pro%E6%8F%92%E4%BB%B6"></a>Pro插件
+    </h4>
+    <p><a href="https://gitee.com/link?target=https%3A%2F%2Fkimdiego2098.github.io%2Fdocs%2F1001">插件列表</a></p>
+</div>
+
 @code {
 
-    /// <summary>
-    /// <inheritdoc/>
-    /// </summary>
-    /// <param name="firstRender"></param>
-    /// <returns></returns>
-    protected override  Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-            NavigationManager.NavigateTo("ModbusMaster");
-        }
 
-        return base.OnAfterRenderAsync(firstRender);
-
-    }
 }
