--- a/src/ThingsGateway.Server/Routes.razor
+++ b/src/ThingsGateway.Server/Routes.razor
@@ -2,6 +2,11 @@
 @using ThingsGateway.Admin.Application
 @namespace ThingsGateway
 
+@{
+    #if NET6_0
+}
+<Microsoft.AspNetCore.Components.Authorization.CascadingAuthenticationState>
+
 <Router AppAssembly="@typeof(Routes).Assembly" AdditionalAssemblies="NetCoreApp.RazorAssemblies.Where(a=>a!=typeof(Routes).Assembly)">
 <Found Context="routeData">
 
@@ -17,6 +22,27 @@
 </Router>
 
 
+</Microsoft.AspNetCore.Components.Authorization.CascadingAuthenticationState>
 
 
+@{
+    #else
+}
+<Router AppAssembly="@typeof(Routes).Assembly" AdditionalAssemblies="NetCoreApp.RazorAssemblies.Where(a=>a!=typeof(Routes).Assembly)">
+<Found Context="routeData">
+
+    <RouteView RouteData="@routeData" DefaultLayout="@typeof(Razor.MainLayout)" />
+
+
+</Found>
+<NotFound>
+    <LayoutView Layout="@typeof(Razor.BaseLayout)">
+    <ThingsGateway.Admin.Razor.NotFound404></ThingsGateway.Admin.Razor.NotFound404>
+        </LayoutView>
+    </NotFound>
+</Router>
+
+@{
+    #endif
+}
 
