fix: opc插件调试日志不显示

--- a/src/plugin/ThingsGateway.Plugin.OpcDa/Pages/OpcDaMaster.razor
+++ b/src/plugin/ThingsGateway.Plugin.OpcDa/Pages/OpcDaMaster.razor
@@ -41,7 +41,7 @@
 
     }
 
-    <AdapterDebugComponent Plc=null LogPath=@LogPath @ref=AdapterDebugComponent  ShowDefaultOtherContent=false ShowDefaultReadWriteContent=false>
+    <AdapterDebugComponent Logger=LogMessage Plc=null LogPath=@LogPath @ref=AdapterDebugComponent  ShowDefaultOtherContent=false ShowDefaultReadWriteContent=false>
 
         <ReadWriteContent>
 
