--- a/src/plugin/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
+++ b/src/plugin/ThingsGateway.Plugin.OpcUa/Pages/OpcUaMaster.razor
@@ -43,7 +43,7 @@
 
     }
 
-    <AdapterDebugComponent Plc=null LogPath=@LogPath @ref=AdapterDebugComponent ShowDefaultOtherContent=false ShowDefaultReadWriteContent=false>
+    <AdapterDebugComponent Logger=LogMessage Plc=null LogPath=@LogPath @ref=AdapterDebugComponent ShowDefaultOtherContent=false ShowDefaultReadWriteContent=false>
 
         <ReadWriteContent>
 
