feat: 关系库存储插件支持动态表格式脚本

--- a/src/plugin/ThingsGateway.Plugin.DB/SqlDB/SqlDBProducerPropertyRazor.razor
+++ b/src/plugin/ThingsGateway.Plugin.DB/SqlDB/SqlDBProducerPropertyRazor.razor
@@ -17,10 +17,13 @@
 
                     <EditTemplate Context="value">
                         <div class="col-12  col-md-12">
-                            <Textarea @bind-Value=@businessProperty.BigTextScriptTabe ShowLabelTooltip="true"
+                            <Textarea @bind-Value=@businessProperty.BigTextScriptHisTable ShowLabelTooltip="true"
                                       rows="5" ShowLabel="true" />
                         </div>
-
+                        <div class="col-12  col-md-12">
+                            <Textarea @bind-Value=@businessProperty.BigTextScriptRealTable ShowLabelTooltip="true"
+                                      rows="5" ShowLabel="true" />
+                        </div>
                     </EditTemplate>
                 </EditorItem>
             }
