--- a/src/ThingsGateway.Admin.Razor/Pages/HardwareInfoPage.razor
+++ b/src/ThingsGateway.Admin.Razor/Pages/HardwareInfoPage.razor
@@ -130,12 +130,18 @@
 
     </div>
 </div>
-<Card IsShadow=true class="m-2 flex-fill" Color="Color.Primary">
-    <HeaderTemplate>
-        @Localizer["HardwareInfoChart"]
-    </HeaderTemplate>
+<div class="row g-2 mx-1 form-inline">
 
-    <BodyTemplate>
-        <Chart @ref=LineChart OnInitAsync="OnInit" Height="var(--line-chart-height)" Width="100%" OnAfterInitAsync="()=>{chartInit=true;return Task.CompletedTask;}" />
-    </BodyTemplate>
-</Card>
+    <div class="col-12 col-md-12">
+
+        <Card IsShadow=true class="m-2 flex-fill" Color="Color.Primary">
+            <HeaderTemplate>
+                @Localizer["HardwareInfoChart"]
+            </HeaderTemplate>
+
+            <BodyTemplate>
+                <Chart @ref=LineChart OnInitAsync="OnInit" Height="var(--line-chart-height)" Width="100%" OnAfterInitAsync="()=>{chartInit=true;return Task.CompletedTask;}" />
+            </BodyTemplate>
+        </Card>
+    </div>
+</div>
