--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/DriverDebugPage.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/DriverDebugPage.razor
@@ -27,7 +27,7 @@
         </FirstPaneTemplate>
         <SecondPaneTemplate>
 
-            <Tab ShowFullScreen ShowClose @ref=tab>
+            <Tab ShowClose @ref=tab>
                 
             </Tab>
         </SecondPaneTemplate>
