feat: 添加保存值功能

--- a/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariableEditComponent.razor
+++ b/src/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariableEditComponent.razor
@@ -26,6 +26,7 @@
                         <EditorItem @bind-Field="@context.ProtectType" />
                         <EditorItem @bind-Field="@context.Enable" />
                         <EditorItem @bind-Field="@context.RpcWriteEnable" />
+                        <EditorItem @bind-Field="@context.SaveValue" />
 
                         <EditorItem @bind-Field="@context.Description">
                             <EditTemplate Context="value">
@@ -141,6 +142,7 @@ else
                     <EditorItem @bind-Field="@context.ProtectType" />
                     <EditorItem @bind-Field="@context.Enable" />
                     <EditorItem @bind-Field="@context.RpcWriteEnable" />
+                    <EditorItem @bind-Field="@context.SaveValue" />
 
                     <EditorItem @bind-Field="@context.Description">
                         <EditTemplate Context="value">
